# 3pseatBot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  bans.py  bot.py  bot_extension.py  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  start.sh  tox.ini  utils.py
.github/ISSUE_TEMPLATE/: 01_bug.yml
.github/workflows/: build.yml  docker.yml  python-package.yml  tests.yml
3pseatBot/: bans.py  bot.py  main.py  utils.py
3pseatBot/cogs/: games.py  general.py  memes.py  minecraft.py  voice.py
3pseatBot/data/: config.cfg
3pseatbot/: bot.py  main.py
3pseatbot/cogs/: games.py  general.py  memes.py  minecraft.py
docker/: Dockerfile  README.md  build.sh  run.sh
docs/: Makefile  conf.py  configuration.rst  develop.rst  getstarted.rst  hosting.rst  index.rst
docs/source/: modules.rst  threepseat.bot.rst  threepseat.cogs.rst  threepseat.rst  threepseat.soundboard.rst  threepseat.utils.rst
soundboard/: README
testing/: asserts.py  config.py  data.py  mock.py  utils.py
tests/: bot_test.py  commands_test.py  config_test.py  conftest.py  database_test.py  logging_test.py  main_test.py  table_test.py  tts_test.py  typing_test.py  utils_test.py
tests/birthdays/: commands_test.py  data_test.py
tests/commands/: commands_test.py  custom_test.py  emote_test.py  general_test.py  mmr_test.py  tts_test.py
tests/custom/: commands_test.py  data_test.py
tests/ext/: extension_test.py
tests/ext/birthdays/: commands_test.py
tests/ext/custom/: commands_test.py  data_test.py
tests/ext/games/: commands_test.py
tests/ext/reminders/: commands_test.py  utils_test.py
tests/ext/rules/: commands_test.py  data_test.py  utils_test.py
tests/ext/sounds/: commands_test.py  data_test.py  web_test.py
tests/listeners/: autoreply_test.py  listeners_test.py
tests/reminders/: commands_test.py  data_test.py  utils_test.py
tests/rules/: commands_test.py  data_test.py  utils_test.py
tests/sounds/: commands_test.py  data_test.py  web_test.py
threepseat/: __init__.py  __main__.py  bans.py  bot.py  commands.py  config.py  constants.py  database.py  logging.py  main.py  rest.py  table.py  tts.py  typing.py  utils.py
threepseat/birthdays/: commands.py  data.py
threepseat/cogs/: __init__.py  commands.py  games.py  general.py  memes.py  minecraft.py  poll.py  rules.py  voice.py
threepseat/commands/: __init__.py  commands.py  custom.py  emote.py  general.py  mmr.py  tts.py
threepseat/custom/: commands.py
threepseat/ext/: extension.py
threepseat/ext/birthdays/: __init__.py  commands.py  data.py
threepseat/ext/custom/: __init__.py  commands.py  data.py
threepseat/ext/games/: __init__.py  commands.py  data.py
threepseat/ext/reminders/: __init__.py  commands.py  data.py  utils.py
threepseat/ext/rules/: __init__.py  commands.py  data.py  exceptions.py  utils.py
threepseat/ext/sounds/: __init__.py  commands.py  data.py  web.py
threepseat/ext/sounds/static/css/: soundboard.css
threepseat/ext/sounds/static/js/: soundboard.js
threepseat/ext/sounds/templates/: base.html  guilds.html  index.html  navbar.html  sounds.html
threepseat/listeners/: __init__.py  autoreply.py  listeners.py
threepseat/reminders/: commands.py  data.py  utils.py
threepseat/rules/: commands.py  data.py  utils.py
threepseat/soundboard/: error.py  service.py
threepseat/sounds/: commands.py  data.py  web.py
threepseat/sounds/static/css/: main.css
threepseat/sounds/templates/: guilds.html  navbar.html  sounds.html  sounds_bootstrap.html
threepseat/tests/: test_database.py
