[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "threepseat"
version = "2.1.16"
authors = [
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
]
description = "3pseatBot: a Discord Bot"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "Quart-Discord",
    "discord.py>=2.2.2",
    "emoji",
    "gtts",
    "pynacl",
    "quart==0.17.0",
    "requests",
    "yt-dlp",
]

[project.scripts]
threepseatbot = "threepseat.main:main"

[project.urls]
repository = "https://github.com/gpauloski/3pseatBot"

[project.optional-dependencies]
dev = [
    "black",
    "covdefaults>=2.2",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "tox",
    "types-emoji",
    "types-requests",
    "virtualenv",
]

[tool.black]
line-length = 79
target-version = ["py310"]
skip-string-normalization = true

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info
"""

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testing.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[tool.pytest]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:async_oauthlib.oauth1_session",
    "ignore::DeprecationWarning:async_oauthlib.oauth2_session",
]

[tool.ruff]
# pycodestyle, pyflakes, flake8-builtins, flake8-bugbear, isort, pep8-naming,
# pydocstyle, flake8-debugger, flake8-commas
select = ["E", "F", "A", "B", "I", "N", "D", "T10", "COM"]
extend-ignore = ["D100", "D104", "D105", "D401", "A002", "A003"]
target-version = "py37"

[tool.ruff.isort]
force-single-line = true
known-first-party = ["threepseat", "test", "testing"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
"*/*_test.py" = ["D10"]
"testing/*" = ["D10"]
"tests/conftest.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false
