[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "threepseat"
dynamic = ["version"]
authors = [
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
]
description = "3pseatBot: a Discord Bot"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "Quart-Discord",
    "discord.py[voice]@git+https://github.com/Rapptz/discord.py",
    "emoji",
    "gtts",
    "pynacl",
    "quart>=0.19.2",
    "requests",
    "tzdata",
    "yt-dlp",
]

[project.scripts]
threepseatbot = "threepseat.main:main"

[project.urls]
repository = "https://github.com/gpauloski/3pseatBot"

[project.optional-dependencies]
dev = [
    "covdefaults>=2.2",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "tox",
    "types-emoji",
    "types-requests",
    "virtualenv",
]

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info
"""

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
# covdefaults already excludes `raise AssertionError`, but ruff's EM101
# requires the message be bound to a variable first, which splits each
# unreachable guard across two lines and leaves the assignment counted.
exclude_lines = ["^\\s*msg = 'Unreachable\\.'$"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "testing.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[tool.pytest]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:async_oauthlib.oauth1_session",
    "ignore::DeprecationWarning:async_oauthlib.oauth2_session",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    # flake8-builtins attribute shadowing
    "A002", "A003", "A005",
    # formatter-conflicting rules (ruff docs recommend disabling these)
    "COM812", "ISC001",
    # pydocstyles
    "D100", "D104", "D105", "D401",
    # boolean-trap rules: not worth the churn of making bool args kw-only
    "FBT001", "FBT002", "FBT003",
    # assert is used pervasively for mypy type-narrowing, not just in tests
    "S101",
    # random is only used for gameplay/sound selection, never security
    "S311",
    # typing-only-import rules: not worth moving imports into TYPE_CHECKING
    "TC001", "TC002", "TC003",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["threepseat", "test", "testing"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"*/*_test.py" = ["D10", "ANN", "SLF001", "S105", "S106", "S108", "ASYNC110", "ASYNC240", "PLR2004"]
"testing/*" = ["D10", "ANN", "SLF001", "S105", "S106", "S108", "ARG001", "ARG002"]
"tests/conftest.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false

[tool.setuptools_scm]
