[metadata]
name = threepseat
version = 2.1.10
description = 3pseatBot: a Discord Bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpauloski/3pseatBot
author = Greg Pauloski
author_email = jgpauloski@uchicago.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    Quart-Discord
    discord.py>=2.0.0
    emoji
    gtts
    pynacl
    quart==0.17.0
    requests
    yt-dlp
python_requires = >=3.10
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    threepseatbot = threepseat.main:main

[options.package_data]
* =
    py.typed
    *.html
    *.css
    *.ico
    *.png
    *.gif

[bdist_wheel]
universal = True

[codespell]
skip =
    .git,
    .github,
    __pycache__,
    build,
    dist,
    .*egg-info,

[coverage:run]
plugins = covdefaults

[flake8]
docstring-convention = google
ignore = D100,D104,D105,W503
per-file-ignores =
    */__init__.py: F401
    */*_test.py: D10
    testing/*: D10
    tests/conftest.py: F401
exclude =
    .git,
    .github,
    __pycache__,
    build,
    dist,
    .*egg-info,
    setup.py,
    venv

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-testing.*]
allow_incomplete_defs = true
allow_untyped_defs = true

[mypy-tests.*]
allow_incomplete_defs = true
allow_untyped_defs = true

[tool:pytest]
asyncio_mode = auto
filterwarnings =
    ignore::DeprecationWarning:async_oauthlib.oauth1_session
    ignore::DeprecationWarning:async_oauthlib.oauth2_session
